--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,28 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="프리미엄 배달 플랫폼 냠냠박스"
     />
+    <meta
+      name="Keywords"
+      content="냠냠박스, 배달대행, 배달플랫폼, 배달의민족, 요기요, 쿠팡이츠, 생각대로, 바로고, 부릉, 커넥트9, 오토바이, 라이더, 가맹점, 주문, 배달"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="냠냠박스" />
+    <meta
+      property="og:description"
+      content="프리미엄 배달 플랫폼 냠냠박스"
+    />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.nyamnyambox.com">
+    <meta property="og:title" content="냠냠박스 관제시스템">
+    <meta property="og:description" content="프리미엄 배달 플랫폼 냠냠박스">
+    <meta property="og:image" content="https://www.nyamnyambox.com/og_img.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon32.png" />
+    <link rel="canonical" href="https://www.nyamnyambox.com"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +43,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <title>냠냠박스 관제시스템</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
