--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <title>냠냠박스 관제시스템</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e86cbd137d58e27a0e08d8cdbd76e89b"></script>
-  </head>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=10pfpd9br6&submodules=geocoder"></script>
+    
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
